--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -13,11 +13,12 @@
     "babel": "^6.23.0",
     "babel-core": "^6.25.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.24.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "https": "^1.0.0"
+    "node-fetch": "^1.7.3"
   }
 }
