--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "style-loader": "^0.19.0",
+    "svg-sprite-loader": "^3.4.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
